--- a/index.html
+++ b/index.html
@@ -16,6 +16,32 @@
   
   </head>
   <body>
-    <main></main>
+    <header class="header__container">
+      <img src="./src/assets/icons/openMusicLogo.svg" class="header__logo" alt="">
+      <img class="header__button-darkmode" src="./src/assets/icons/sun.svg" alt="">
+    </header>
+    <nav class="filter__container">
+      <h2>genero musical</h2>
+      <div class="filter__categories">
+        <!-- JS will render it -->
+      </div>
+      <div class="filter__sliderDiv">
+        <div class="filter__priceDiv">
+          <h2>Definir preço</h2>
+          <span>Até R$ 240,00</span>
+        </div>
+        <input type="range" name="" id="">
+      </div>
+
+    </nav>
+    <main>
+      <section class="album__container">
+        <h2 class="album__title">Albuns Encontrados</h2>
+        <ul class="album__deck">
+          <li class="album__card">card</li>
+        </ul>
+      </section>
+
+    </main>
   </body>
 </html>
