--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
   
   </head>
   <body>
-    <header class="header__container">
-      <img src="./src/assets/icons/openMusicLogo.svg" class="header__logo" alt="">
-      <img class="header__button-darkmode" src="./src/assets/icons/sun.svg" alt="">
+    <header class="container header__container">
+      <h1 class="header__logo" alt="">Open music</h1>
+      <button class="header__button-darkmode">
+        <img  src="./src/assets/icons/moon.svg" alt="">
+      </button>
+        
     </header>
-    <nav class="filter__container">
-      <h2>genero musical</h2>
+    <nav class="container filter__container">
+      <h2 class="filter__title">gênero musical</h2>
       <div class="filter__categories">
         <!-- JS will render it -->
       </div>
